--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,8 @@ $secondaryBlue: #002BC2;
 $black: #000000;
 
 body{
+  margin:0;
   font-family: 'Inter', sans-serif;
   font-family: 'Jura', sans-serif;
 }
+
