--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,16 +7,14 @@
     background-position: 0 85%;
     background-repeat: no-repeat;
     height: 80vh;
-    display: flex;
-    justify-content: flex-end center;
-    flex-direction: column; /* Sørger for, at børnene er stakket i kolonnen */
+    position: relative;
+   
    
     .headers{
-        display: flex;
-        flex-direction: column;
-        align-self: flex-end;
-        margin-right: 4rem;
-        margin-top: 12rem;
+        position: absolute;
+        top: 4rem;
+        right: 4rem;
+        // margin-top: 12rem;
         color: $white;
     }
 
@@ -35,9 +33,11 @@
     }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 1000px) {
     .headers {
-        margin-right: 0;
-        background-color: aqua;
+       left: 4rem;
+       h1{
+        font-size: 10vh;
+       }
     }
 }
