--- a/src/components/NotFound/NotFound.module.scss
+++ b/src/components/NotFound/NotFound.module.scss
@@ -1,11 +1,26 @@
+@import '../../App.scss';
+@import '../Footer/Footer.module.scss';
+
 .wrapper{
 position: absolute;
-top: 30%;
+top: 5.56rem;
+left: 0;
 width: 100%;
-padding: 2rem;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-color:black;
-background-color: rgb(239, 95, 119);
+background-image: url('../../assets/img/2.jpg');
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+height: 80vh;
+
+h1, p{
+    padding:3rem;
+    text-align: center
 }
+}
+
+
+@media screen and (max-width: 1000px) {
+    .wrapper {
+        top:0;
+
+    }}
